[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/BrainBuilder/NeuronProperties.gd" type="Script" id=1]

[node name="NeuronProperties" type="GridContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 2
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 3.0
margin_right = 34.0
margin_bottom = 17.0
text = "Type:"

[node name="SelectType" type="OptionButton" parent="."]
margin_left = 38.0
margin_right = 67.0
margin_bottom = 20.0

[connection signal="item_selected" from="SelectType" to="." method="_on_SelectType_item_selected"]
